# roomba-ros2-work

./: .bazelrc  .clang-format  .clang-tidy  BUILD.bazel  MODULE.bazel  README.md
chatter/: BUILD.bazel  talker.cc
config/: BUILD.bazel  roomba_params.yaml
docs/: runbook.md
docs/metrics/: 2026-05-06_baseline.json
drive_mux_node/: BUILD.bazel  drive_mux_node.cpp
joy_teleop_node/: BUILD.bazel  joy_teleop_node.cpp
keyboard_node/: BUILD.bazel  keyboard_node.cpp
launch/: BUILD.bazel  roomba_bringup.py  roomba_bringup_stub.py  roomba_keyboard.py  roomba_keyboard_stub.py
libcpp/: hello_time.cpp
libcpp/tests/: hello_time_test.cpp
libroomba/: BUILD.bazel
libroomba/include/: roomba_oi.hpp  serial_driver.hpp  stub_serial_driver.hpp  stub_vl53l1x_driver.hpp  vl53l1x_driver.hpp  wall_follower.hpp
libroomba/tests/: BUILD.bazel  roomba_oi_test.cpp  stub_serial_driver_test.cpp  wall_follower_test.cpp
monitor_node/: BUILD.bazel  monitor_node.cpp
planner_node/: BUILD.bazel  planner_node.cpp  wall_follower.hpp
planner_node/tests/: BUILD.bazel  wall_follower_test.cpp
roomba_msgs/: BUILD.bazel  CMakeLists.txt  package.xml
roomba_msgs/msg/: DriveCommand.msg  DriveMode.msg  RoombaSensors.msg
roomba_node/: BUILD.bazel  roomba_node.cpp
scripts/: analyze_bag.py  camera.sh  foxglove_bridge.sh  gen_topic_graph.py  joy_node.sh  mcap_to_webm.py  record.sh
tof_node/: BUILD.bazel  tof_node.cpp
tools/: apply_clang_format.sh  check_clang_format.sh
