# Configuaring clang-tidy
filegroup(
       name = "clang_tidy_config",
       srcs = [".clang-tidy"],
       visibility = ["//visibility:public"],
)

# Defined for convenience.

alias(
    name = "ros2_lifecycle",
    actual = "@com_github_mvukov_rules_ros2//ros2:ros2_lifecycle",
)

alias(
    name = "ros2_param",
    actual = "@com_github_mvukov_rules_ros2//ros2:ros2_param",
)
