load("@com_github_mvukov_rules_ros2//ros2:cc_defs.bzl", "ros2_cpp_binary")

ros2_cpp_binary(
    name = "joy_teleop_node",
    srcs = ["joy_teleop_node.cpp"],
    deps = [
        "//roomba_msgs:cpp_roomba_msgs",
        "@ros2_common_interfaces//:cpp_sensor_msgs",
        "@ros2_rclcpp//:rclcpp",
    ],
    visibility = ["//visibility:public"],
)
