load("@com_github_mvukov_rules_ros2//ros2:launch.bzl", "ros2_launch")

ros2_launch(
    name = "roomba_bringup",
    launch_file = "roomba_bringup.py",
    data = ["//config:roomba_params"],
    nodes = [
        "//roomba_node",
        "//drive_mux_node",
        "//planner_node",
        "//monitor_node",
    ],
    visibility = ["//visibility:public"],
)

ros2_launch(
    name = "roomba_bringup_stub",
    launch_file = "roomba_bringup_stub.py",
    data = ["//config:roomba_params"],
    nodes = [
        "//roomba_node",
        "//drive_mux_node",
        "//planner_node",
        "//monitor_node",
    ],
    visibility = ["//visibility:public"],
)

