cc_library(
    name = "serial_driver",
    hdrs = ["include/serial_driver.hpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "stub_serial_driver",
    hdrs = ["include/stub_serial_driver.hpp"],
    visibility = ["//visibility:public"],
    deps = [":serial_driver"],
)

cc_library(
    name = "roomba_oi",
    hdrs = ["include/roomba_oi.hpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "wall_follower",
    hdrs = ["include/wall_follower.hpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "vl53l1x_driver",
    hdrs = ["include/vl53l1x_driver.hpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "stub_vl53l1x_driver",
    hdrs = ["include/stub_vl53l1x_driver.hpp"],
    visibility = ["//visibility:public"],
    deps = [":vl53l1x_driver"],
)
