load(
    "@com_github_mvukov_rules_ros2//ros2:interfaces.bzl",
    "cpp_ros2_interface_library",
    "py_ros2_interface_library",
    "ros2_interface_library",
)

ros2_interface_library(
    name = "roomba_msgs",
    srcs = [
        "msg/DriveCommand.msg",
        "msg/RoombaSensors.msg",
    ],
    visibility = ["//visibility:public"],
)

cpp_ros2_interface_library(
    name = "cpp_roomba_msgs",
    deps = [":roomba_msgs"],
    visibility = ["//visibility:public"],
)

# Python bindings (for launch_testing and ros2 topic echo via colcon)
py_ros2_interface_library(
    name = "py_roomba_msgs",
    deps = [":roomba_msgs"],
    visibility = ["//visibility:public"],
)
