load("@com_github_mvukov_rules_ros2//ros2:cc_defs.bzl", "ros2_cpp_binary")

ros2_cpp_binary(
    name = "roomba_node",
    srcs = ["roomba_node.cpp"],
    deps = [
        "//libroomba:roomba_oi",
        "//libroomba:serial_driver",
        "//libroomba:stub_serial_driver",
        "//roomba_msgs:cpp_roomba_msgs",
        "@ros2_rclcpp//:rclcpp",
    ],
    visibility = ["//visibility:public"],
)
