load("@com_github_mvukov_rules_ros2//ros2:cc_defs.bzl", "ros2_cpp_binary")

ros2_cpp_binary(
    name = "tof_node",
    srcs = ["tof_node.cpp"],
    deps = [
        "//libroomba:stub_vl53l1x_driver",
        "//libroomba:vl53l1x_driver",
        "@ros2_common_interfaces//:cpp_std_msgs",
        "@ros2_rclcpp//:rclcpp",
    ],
    visibility = ["//visibility:public"],
)
